# soccer-simulation

./: .gitignore  index.js  package.json
backend/: Attacker.cpp  Attacker.h  Ball.cpp  Ball.h  Bot.cpp  Bot.h  CMakeLists.txt  Deffender.cpp  Deffender.h  Goal.cpp  Goal.h  MovableObject.cpp  MovableObject.h  Playground.cpp  Playground.h  PointsTable.cpp  PointsTable.h  RealPlayer.cpp  RealPlayer.h  Seesight.cpp  Seesight.h  Team.cpp  Team.h  TimeTable.cpp  TimeTable.h  main.cpp
frontend/: index.js
frontend/public/: canvas.js  index.html
